# numexa-python-sdk

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  requirements.txt  setup.cfg
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: config.yml
examples/: azure_fallback_loadbalance.ipynb  completions.ipynb  fallback_loadbalance.ipynb
numexa/: __init__.py  _numexa_scripts.py
numexa/api_resources/: __init__.py  apis.py  base_client.py  global_constants.py  utils.py
tests/: test_anthropic.py  test_azure_openai.py  test_cohere.py  test_openai.py  utils.py
tests/anyscale_tests/: test_anyscale_CodeLlama-34b-Instruct-hf.py  test_anyscale_Llama-2-13b-chat-hf.py  test_anyscale_Llama-2-70b-chat-hf.py  test_anyscale_Llama-2-7b-chat-hf.py
