[metadata]
name = numexa
version = attr: numexa.version.VERSION
description = Python client library for the Numexa API
long_description = file: README.md
long_description_content_type = text/markdown
author = dreamcode1994
author_email = 118388087+dreamcode1994@users.noreply.github.com
url = https://github.com/numexa-python-sdk
license_files = LICENSE
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
zip_safe = True
include_package_data = True
install_requires =
  httpx
  mypy==0.991
  black==23.7.0
  typing_extensions==4.7.1
  pydantic==1.10.12

[options.entry_points]
console_scripts =
  numexa = numexa._numexa_scripts:main

[options.package_data]
  numexa = py.typed

[options.extras_require]
dev =
  mypy==0.991
  black==23.7.0
  typing_extensions==4.7.1
  pydantic==1.10.12

[options.packages.find]
exclude =
  tests
  tests.*